--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@types/node": "^18.15.5",
+    "formik": "^2.2.9",
     "framer-motion": "^10.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
-    "swiper": "^9.1.1"
+    "swiper": "^9.1.1",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
